category and links unit test passed

--- a/Textbook Exercises/SportsStore.Web/SportsStore.Web/Views/Product/ProductListing.cshtml
+++ b/Textbook Exercises/SportsStore.Web/SportsStore.Web/Views/Product/ProductListing.cshtml
@@ -12,5 +12,6 @@
  }
 
 <div class="btn btn-group float-end">
-    @Html.PageLinks(Model.PagingInfo, p => Url.Action("ProductListing", new { page = p }))
+    @Html.PageLinks(Model.PagingInfo, p => Url.Action("ProductListing", 
+        new { page = p, category = Model.CurrentCategory }))
 </div>
