--- a/Textbook Exercises/SportsStore.Web/SportsStore.Web/Views/Shared/_Layout.cshtml
+++ b/Textbook Exercises/SportsStore.Web/SportsStore.Web/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
         <div class="card-body">
             <div class="row">
                 <div id="categories" class="col-sm-3">
-                    something goes here
+                    @Html.Action("Menu", "Nav")
                 </div>
                 <div class="col-sm-1"></div>
                 <div class="col-sm-8">
