--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_MerchSummary.cshtml
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_MerchSummary.cshtml
@@ -3,20 +3,24 @@
 
 
 <div class="card mb-3">
-    <div class="p-3 m-2">
-        @*<div class="float-end btn btn-secondary btn-lg">@Model.Price.ToString("c") ++</div>*@
-        <h2>@Model.Name</h2>
-        <input type="button" class="btn btn-secondary btn-lg float-end" value="@Model.Price.ToString("c")" disabled />
+    <div class="row">
+        <div class="col-sm-8 p-3">
+            <h2>@Model.Name</h2>
+            <span class="pt-3 ">@Model.Description</span>
+        </div>
+        <div class="col-sm-4 p-3" style="position:relative">
+            <input type="button" class="btn btn-secondary float-end mx-2" value="@Model.Price.ToString("c")" disabled />
 
-        @using (Html.BeginForm("AddToCart", "Cart"))
-        {
-            <div class="float-end">
-                @Html.HiddenFor(x => x.Id)
-                @Html.Hidden("returnUrl", Request.Url.PathAndQuery)
-                <input type="submit" class="btn btn-outline-secondary btn-lg" value="Add To Cart" />
-            </div>
-        }
-        <span class="pt-3 ">@Model.Description</span>
+            @using (Html.BeginForm("AddToCart", "Cart"))
+            {
+                <div class="float-end">
+                    @Html.HiddenFor(x => x.Id)
+                    @Html.Hidden("returnUrl", Request.Url.PathAndQuery)
+                    <input type="submit" class="btn btn-outline-secondary" value="Add To Cart" />
+                </div>
+            }
+        </div>
+
     </div>
 </div>
 
