--- a/Textbook Exercises/SportsStore.Web/SportsStore.Web/Views/Shared/_ProductSummary.cshtml
+++ b/Textbook Exercises/SportsStore.Web/SportsStore.Web/Views/Shared/_ProductSummary.cshtml
@@ -1,17 +1,23 @@
 ﻿@model SportsStore.Domain.Product
 
-<div class="card text-bg-light mb-3">
-    <h3 class="m-3">
-        @Model.Name
-        <span class="float-end text-secondary">@Model.Price.ToString("c")</span>
-    </h3>
-    <span class="lead m-3">@Model.Description</span>
-    @using (Html.BeginForm("AddToCart", "Cart"))
-    {
-        <span class="float-end m-3">
-            @Html.HiddenFor(x => x.ProductId)
-            @Html.Hidden("returnUrl", Request.Url.PathAndQuery)
-            <input type="submit" class="btn btn-success" value="Add To Cart" />
-        </span>
-    }
+<div class="card mb-3">
+    <div class="row">
+        <div class="col-sm-8 p-3">
+            <h2>@Model.Name</h2>
+            <span class="pt-3 ">@Model.Description</span>
+        </div>
+        <div class="col-sm-4 p-3">
+            <input type="button" class="btn btn-secondary float-end mx-2" value="@Model.Price.ToString("c")" disabled />
+
+            @using (Html.BeginForm("AddToCart", "Cart"))
+            {
+                <div class="float-end">
+                    @Html.HiddenFor(x => x.ProductId)
+                    @Html.Hidden("returnUrl", Request.Url.PathAndQuery)
+                    <input type="submit" class="btn btn-outline-secondary" value="Add To Cart" />
+                </div>
+            }
+        </div>
+
+    </div>
 </div>
