--- a/Textbook Exercises/SportsStore.Web/SportsStore.Web/Views/Cart/Index.cshtml
+++ b/Textbook Exercises/SportsStore.Web/SportsStore.Web/Views/Cart/Index.cshtml
@@ -4,25 +4,36 @@
     ViewBag.Title = "Sports Store: Your Cart";
 }
 
+<style>
+    #cartTable td {vertical-align: middle;}
+</style>
+
 <h2>Your Cart: </h2>
-<table class="table">
+<table id="cartTable" class="table">
     <thead>
         <tr>
             <th>Quantity</th>
             <th>Item</th>
-            <th class="float-end">Price</th>
-            <th class="float-end">Subtotal</th>
+            <th>Price</th>
+            <th>Subtotal</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var line in Model.Cart.Lines)
         {
             <tr>
-                <td class="text-center">@line.Quantity</td>
-                <td class="text-center">@line.Product.Name</td>
-                <td class="text-center">@line.Product.Price.ToString("c")</td>
-                <td class="text-center">
+                <td>@line.Quantity</td>
+                <td>@line.Product.Name</td>
+                <td>@line.Product.Price.ToString("c")</td>
+                <td>
                     @((line.Quantity * line.Product.Price).ToString("c"))
+                </td>
+                <td>
+                    @using (Html.BeginForm("RemoveFromCart", "Cart")) {
+                        @Html.Hidden("ProductId", line.Product.ProductId)
+                        @Html.HiddenFor(x => x.ReturnUrl)
+                       <input type="submit" class="btn btn-danger btn-sm" value="Remove" />
+                    }
                 </td>
             </tr>
         }
