--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_Layout.cshtml
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     @Html.Partial("_NavHeader", applicationName)
 
     <div class="card container mt-2">
-        <h3 class="card-header text-center">Merchandise</h3>
+            @Html.Action("Summary", "Cart")
         <div class="card-body">
             <div class="row">
                 <div id="categories" class="col-sm-2">
