completing the checkout cart

--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Cart/Summary.cshtml
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Cart/Summary.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SportsStore.Domain.Cart
 
 
-<div class="m-3">
+<div class="m-3" title="This is a title">
     <div class="float-start">
         @Html.ActionLink("Checkout", "Index", "Cart",
         new { returnUrl = Request.Url.PathAndQuery },
