--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Cart/Index.cshtml
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Cart/Index.cshtml
@@ -44,4 +44,5 @@
 
 <div class="text-center">
     <a class="btn btn-primary btn-lg" href="@Model.ReturnUrl">Continue Shopping</a>
+    @Html.ActionLink("Checkout now", "Checkout", null, new { @class = "btn btn-primary btn-lg", @title="Yeah Yah!"})
 </div>
