--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Cart/Checkout.cshtml
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Cart/Checkout.cshtml
@@ -11,35 +11,31 @@
 {
     <h4>Ship To: </h4>
     <div class="row g-3 mb-3">
-        <div class="col-sm-6">
+        <div class="col-sm-2">@Html.LabelFor(x => x.FullLegalName)</div>
+        <div class="col-sm-7">
             @Html.TextBoxFor(x => x.FullLegalName, new { @class = "form-control", @placeholder = "Enter your Full Name" })
         </div>
+        <div class="col-sm-3"></div>
     </div>
 
     <h4>Address Information: </h4>
-    <div class="row g-3 mb-3">
-        <div class="col-sm-4">
-            @Html.TextBoxFor(x => x.Line1, new { @class = "form-control", @placeholder = "Enter your address" })
-        </div>
-        <div class="col-sm-4">
-            @Html.TextBoxFor(x => x.Line1, new { @class = "form-control" })
-        </div>
-        <div class="col-sm-4">
-            @Html.TextBoxFor(x => x.Line1, new { @class = "form-control" })
-        </div>
-    </div>
+    foreach (var property in ViewData.ModelMetadata.Properties) {
 
-    <div class="row g-3 mb-4">
-        <div class="col-sm-7">
-            @Html.TextBoxFor(x => x.City, new { @class = "form-control", @placeholder = "City" })
-        </div>
-        <div class="col-sm">
-            @Html.TextBoxFor(x => x.State, new { @class = "form-control", @placeholder = "State" })
-        </div>
-        <div class="col-sm">
-            @Html.TextBoxFor(x => x.ZipCode, new { @class = "form-control", @placeholder = "Zip Code" })
-        </div>
-    </div>
+        if(property.PropertyName != "FullLegalName"
+            && property.PropertyName != "GiftWrap"
+            && property.PropertyName != "Id") {
+            <div class="row g-3 mb-3">
+                <div class="col-sm-2">@(property.DisplayName ?? property.PropertyName)</div>
+                <div class="col-sm-7">
+                    @Html.TextBox(property.PropertyName, null,
+                new { @class = "form-control"})
+                </div> 
+                <div class="col-sm-3"></div>
+            </div>
+        }
+    }
+
+    <h4>Options: </h4>    
     <div class="row g-3 mb-4">
         <div class="col-sm-4">
             <div class="form-check">
