--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Cart/Checkout.cshtml
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Cart/Checkout.cshtml
@@ -9,6 +9,8 @@
 
 @using (Html.BeginForm())
 {
+    @Html.ValidationSummary()
+
     <h4>Ship To: </h4>
     <div class="row g-3 mb-3">
         <div class="col-sm-2">@Html.LabelFor(x => x.FullLegalName)</div>
