--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_Layout.cshtml
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_Layout.cshtml
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     @{ string applicationName = "Sports Store";}
     <title>@ViewBag.Title - @applicationName.Replace(" ", "")</title>
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/Content/Site.css" rel="stylesheet" />
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
 
     @Html.Partial("_NavHeader", applicationName)
 
     <div class="card container mt-2">
-            @Html.Action("Summary", "Cart")
+        @Html.Action("Summary", "Cart")
         <div class="card-body">
             <div class="row">
                 <div id="categories" class="col-sm-2">
@@ -33,8 +33,9 @@
         </div>
     </nav>
 
-    <script src="~/Scripts/bootstrap.bundle.min.js"></script>
-    <script src="~/Scripts/jquery-3.7.1.slim.min.js"></script>
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @RenderSection("scripts", required: false)
 </body>
 
 </html>
