--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Cart/Summary.cshtml
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Cart/Summary.cshtml
@@ -1,16 +1,26 @@
 ﻿@model SportsStore.Domain.Cart
+    @{ 
+        string summaryTitle = "Merchandise";
+    }
 
 
-<div class="m-3" title="This is a title">
-    <div class="float-start">
-        @Html.ActionLink("Checkout", "Index", "Cart",
-        new { returnUrl = Request.Url.PathAndQuery },
-        new { @class = "btn btn-secondary navbar-btn" })
-    </div>
-    <h1 class="text-center">Merch</h1>
-    <div class="float-end">
-        <b>Your Cart:</b>
+
+
+
+
+
+<div class="hstack gap-3">
+    <div class="p-2 d-none d-sm-block"><h1>@summaryTitle</h1></div>
+
+    <div class="p-2 ms-auto">
+        <b class="d-none d-sm-block">Your Cart:</b>
         @Model.Lines.Sum(x => x.Quantity) item(s),
         @Model.ComputeTotalValue().ToString("c")
+    </div>
+
+    <div class="p-2">
+        @Html.ActionLink("Checkout", "Index", "Cart",
+    new { returnUrl = Request.Url.PathAndQuery },
+    new { @class = "btn btn-secondary navbar-btn" })
     </div>
 </div>
