--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_Layout.cshtml
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_Layout.cshtml
@@ -16,10 +16,10 @@
         @Html.Action("Summary", "Cart")
         <div class="card-body">
             <div class="row">
-                <div id="categories" class="col-sm-2">
+                <div id="categories" class="col-md-3 d-none d-md-block">
                     @Html.Action("Menu", "Nav")
                 </div>
-                <div class="col-sm-10">
+                <div class="col-sm-12 col-md-9">
                     @RenderBody()
                 </div>
             </div>
