--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_MerchSummary.cshtml
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_MerchSummary.cshtml
@@ -9,7 +9,7 @@
             <span class="pt-3 ">@Model.Description</span>
         </div>
         <div class="col-sm-4 p-3">
-            <input type="button" class="btn btn-secondary float-end mx-2" value="@Model.Price.ToString("c")" disabled />
+            <input type="button" class="btn btn-secondary float-end mx-2 mb-1" value="@Model.Price.ToString("c")" disabled />
 
             @using (Html.BeginForm("AddToCart", "Cart"))
             {
