--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_AdminLayout.cshtml
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_AdminLayout.cshtml
@@ -3,14 +3,28 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    @{ string applicationName = "Sports Store";}
+    @{ string applicationName = "Sports Store"; }
     <title>@ViewBag.Title - @applicationName.Replace(" ", "")</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
 
-    @Html.Partial("_NavHeader", applicationName)
+    <nav class="navbar bg-dark navbar-expand-lg border-bottom border-bottom-dark bg-body-tertiary" data-bs-theme="dark">
+        <div class="container">
+            @Html.ActionLink(applicationName, "List", "Merch", null, new { @class = "navbar-brand" })
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+    </nav>
+
+    <div class="container w-25">
+        @if (TempData["message"] != null) {
+            <div class="alert alert-success">@TempData["message"]</div>
+        }
+    </div>
+    
     @RenderBody()
 
 
