--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Admin/Edit.cshtml
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Admin/Edit.cshtml
@@ -3,13 +3,15 @@
 @{
     ViewBag.Title = $"Admin: Edit {Model.Name}";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    //HtmlHelper.ClientValidationEnabled = false;
+    //HtmlHelper.UnobtrusiveJavaScriptEnabled = false;
 }
 
 <div class="card container w-50 my-5">
     <div class="card-header">
         <h3 class="text-center">Edit @Model.Name</h3>
     </div>
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm("Edit", "Admin")) {
         <div class="cart-body">
             @Html.HiddenFor(m => m.Id)
             @foreach (var property in ViewData.ModelMetadata.Properties) {
