--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_AdminLayout.cshtml
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_AdminLayout.cshtml
@@ -20,17 +20,18 @@
     </nav>
 
     <div class="container w-25">
-        @if (TempData["message"] != null) {
+        @if (TempData["message"] != null)
+        {
             <div class="alert alert-success">@TempData["message"]</div>
         }
     </div>
-    
+
     @RenderBody()
 
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/bundles/global")
+    <script src="~/Scripts/bootstrap.bundle.min.js"></script>
+    <script src="~/Scripts/jquery-3.7.1.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 
