--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_MerchSummary.cshtml
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_MerchSummary.cshtml
@@ -4,16 +4,31 @@
 
 <div class="card mb-3">
     <div class="row">
-        <div class="col-sm-8 p-3">
+        <div class="col-sm-3 py-3" style="width:7rem;">
+            @if(Model.ImageData != null) {
+                <div class="float-end">
+                    <img class="img-thumbnail" 
+                         src="@Url.Action("GetImage", "Merch", new {Model.Id})" 
+                         alt="@Model.Name"
+                         title="@Model.Description"/>
+                </div>
+            } else {
+                <div class="btn text-center">
+                    Image Not Available
+                </div>
+            }
+        </div>
+
+        <div class="col-sm-6 py-3">
             <h2>@Model.Name</h2>
             <span class="pt-3 ">@Model.Description</span>
         </div>
-        <div class="col-sm-4 p-3">
-            <input type="button" class="btn btn-secondary float-end mx-2 mb-1" value="@Model.Price.ToString("c")" disabled />
+        <div class="col-sm-3 py-3 float-start">
+            <input type="button" class="btn btn-secondary mb-1" value="@Model.Price.ToString("c")" disabled />
 
             @using (Html.BeginForm("AddToCart", "Cart"))
             {
-                <div class="float-end">
+                <div class="">
                     @Html.HiddenFor(x => x.Id)
                     @Html.Hidden("returnUrl", Request.Url.PathAndQuery)
                     <input type="submit" class="btn btn-outline-secondary" value="Add To Cart" />
