--- a/Textbook Exercises/ASP.NETMVCPlatform/PartOne/Views/Home/Index_Old.cshtml
+++ b/Textbook Exercises/ASP.NETMVCPlatform/PartOne/Views/Home/Index_Old.cshtml
@@ -16,13 +16,17 @@
 <body>
     <div class="container w-25">
         <div class="card bg-primary-subtle my-3">
-            @if (ViewBag.SelectedColor == null) {
+            @if (ViewBag.SelectedColor == null)
+            {
                 <h4 class="card-header">Vote for your favorite color:</h4>
-            } else {
+            }
+            else
+            {
                 <h4 class="card-header">Change your vote from @ViewBag.SelectedColor</h4>
             }
             <div class="card-body">
-                @using (Html.BeginForm()) {
+                @using (Html.BeginForm())
+                {
                     @Html.DropDownList("color",
                         new SelectList(Enum.GetValues(typeof(Color))), "Choose a Color",
                         new { @class = "form-control mb-3 w-50" })
@@ -37,11 +41,36 @@
             <h5 class="card-header">Results:</h5>
             <table class="table small table-striped">
                 <tr><th>Color </th><th>Vote </th></tr>
-                @foreach (Color c in Enum.GetValues(typeof(Color))) {
+                @foreach (Color c in Enum.GetValues(typeof(Color)))
+                {
                     <tr><td>@c</td><td>@Votes.GetVotes(c)</td></tr>
                 }
             </table>
         </div>
+
+        <div class="card bg-info-subtle my-3">
+            <h5 class="card-header">Events</h5>
+            <table class="table small table-striped">
+                @foreach (string eventName in Model)
+                {
+                    <tr><td>@eventName</td></tr>
+                }
+            </table>
+        </div>
+
+        <div class="card bg-info-subtle my-3">
+            <h5 class="card-header">Events</h5>
+            <table class="table small table-striped">
+                <tr><th>Property</th><th>Value</th></tr>
+                <tr><td>HttpMethod</td><td>@Request.HttpMethod</td></tr>
+                <tr><td>IsLocal</td><td>@Request.IsLocal</td></tr>
+                <tr><td>RawUrl</td><td>@Request.RawUrl</td></tr>
+                <tr><td>PhysicalPath</td><td>@Response.StatusCode</td></tr>
+                <tr><td>PhysicalPath</td><td>@Request.PhysicalPath</td></tr>
+            </table>
+        </div>
     </div>
+
+
 </body>
 </html>
