setting up 51Degrees ngkpgs

--- a/Textbook Exercises/ASP.NETMVCPlatform/PartTwo.DetectingDeviceCapabilities/Views/Home/Index.cshtml
+++ b/Textbook Exercises/ASP.NETMVCPlatform/PartTwo.DetectingDeviceCapabilities/Views/Home/Index.cshtml
@@ -17,8 +17,8 @@
     </style>
 </head>
 <body>
-    <div class="">
-        <div class="alert alert-success">
+    <div class="container w-75">
+        <div class="alert alert-success text-center">
             This is the /Views/Home/Index.cshtml view
         </div>
         <div class="card text-secondary">
