Improving Data capabilities

--- a/Textbook Exercises/ASP.NETMVCPlatform/PartTwo.DetectingDeviceCapabilities/Views/Home/Index.cshtml
+++ b/Textbook Exercises/ASP.NETMVCPlatform/PartTwo.DetectingDeviceCapabilities/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 
 @{
     Layout = null;
+
+    var displayPartialView = Request.Browser.IsMobileDevice ? "_List.MobileBrowser" : "_List.AllBrowser";
 }
 
 <!DOCTYPE html>
@@ -13,7 +15,7 @@
     <title>Index</title>
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <style>
-        body{padding-top:10px;}
+        body { padding-top: 10px; }
     </style>
 </head>
 <body>
@@ -23,30 +25,7 @@
         </div>
         <div class="card text-secondary">
             <div class="card-title text-center">Programmer Info</div>
-            <table class="table table-striped">
-                <thead class="table-dark">
-                    <tr>
-                        <td>FirstName</td>
-                        <td>LastName</td>
-                        <td>Title</td>
-                        <td>City</td>
-                        <td>Country</td>
-                        <td>Language</td>
-                    </tr>  
-                </thead>
-                @foreach (Programmer programmer in Model) {
-                    <tbody>
-                        <tr>
-                            <td>@programmer.FirstName</td>
-                            <td>@programmer.LastName</td>
-                            <td>@programmer.Title</td>
-                            <td>@programmer.City</td>
-                            <td>@programmer.Country</td>
-                            <td>@programmer.Language</td>
-                        </tr>
-                    </tbody>
-                }
-            </table>
+            @Html.Partial("_Browser", Model)
         </div>
     </div>
 </body>
