reading out webconfig content

--- a/Textbook Exercises/ASP.NETMVCPlatform/PartThree.Chapter9/Views/Home/Index.cshtml
+++ b/Textbook Exercises/ASP.NETMVCPlatform/PartThree.Chapter9/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
         <h3 class="card-header text-center">Configuration Data</h3>
         <table class="table table-striped table-light">
             <thead>
-                <tr><th>Property</th><th>Property</th></tr>
+                <tr><th>Property</th><th>Values</th></tr>
             </thead>
             <tbody>
                 @foreach(string key in Model.Keys) {
