--- a/Textbook Exercises/ASP.NETMVCPlatform/Ch13_IdentityApiSupport/Views/Admin/Create.cshtml
+++ b/Textbook Exercises/ASP.NETMVCPlatform/Ch13_IdentityApiSupport/Views/Admin/Create.cshtml
@@ -6,45 +6,22 @@
 
 <h2>Create User</h2>
 
-@using (Html.BeginForm()) 
+@Html.ValidationSummary(false)
+@using (Html.BeginForm())
 {
-    
-    <div class="form-horizontal">
-        <h4>CreateModel</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.FullName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.FullName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.FullName, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
+    <div class="mb-3">
+        <label>Name:</label>
+        @Html.TextBoxFor(n => n.FullName, new { @class = "form-control" })
     </div>
-}
+    <div class="mb-3">
+        <label>Email:</label>
+        @Html.TextBoxFor(n => n.Email, new { @class = "form-control" })
+    </div>
+    <div class="mb-3">
+        <label>Password:</label>
+        @Html.PasswordFor(n => n.Password, new { @class = "form-control" })
+    </div>
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+    <input type="submit" value="Create" class="btn btn-outline-secondary" />
+    @Html.ActionLink("Go Back", "Index", "Admin", null, new { @class = "btn btn-outline-danger" })
+}
