--- a/Textbook Exercises/ASP.NETMVCPlatform/Ch13_IdentityApiSupport/Views/Admin/Index.cshtml
+++ b/Textbook Exercises/ASP.NETMVCPlatform/Ch13_IdentityApiSupport/Views/Admin/Index.cshtml
@@ -5,13 +5,13 @@
     ViewBag.Title = "Index";
 }
 
-<div class="card text-center mb-3">
-    <div class="card-header">User Details</div>
-    <table>
-        <tr><th>ID</th><th>Name</th><th>Email </th></tr>
+<div class="card mb-3 text-secondary">
+    <h4 class="card-header text-center">User Accounts</h4>
+    <table class="table table-striped">
+        <tr><th>ID</th><th>Name</th><th>Email</th><th>Actions</th></tr>
         @if (Model.Count() == 0)
         {
-            <tr><td colspan="3" class="text-center">No User Accounts</td></tr>
+            <tr><td colspan="4" class="text-center">No User Accounts</td></tr>
         }
         else
         {
@@ -21,9 +21,17 @@
                     <td>@user.Id</td>
                     <td>@user.UserName</td>
                     <td>@user.Email</td>
+                    <td>
+                        @using(Html.BeginForm("Delete", "Admin",
+                            new {id = user.Id})) {
+                            @Html.ActionLink("Edit", "Edit", new {id = user.Id},
+                            new { @class = "btn btn-outline-danger btn-sm"})
+                            <button class="btn btn-danger btn-sm" type="submit">Delete</button>
+                        }
+                    </td>
                 </tr>
             }
         }
     </table>
 </div>
-    @Html.ActionLink("Create", "Create", null, new { @class = "btn btn-secondary" })
+    @Html.ActionLink("Create", "Create", null, new { @class = "btn btn-primary" })
