--- a/Textbook Exercises/ASP.NETMVCPlatform/Ch13_IdentityApiSupport/Views/Shared/_Layout.cshtml
+++ b/Textbook Exercises/ASP.NETMVCPlatform/Ch13_IdentityApiSupport/Views/Shared/_Layout.cshtml
@@ -12,5 +12,8 @@
     <div class="container w-50 body-content">
         @RenderBody()
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="~/Scripts/site.js"></script>
+    @RenderSection("scripts", required: false)
 </body>
 </html>
