--- a/Textbook Exercises/ASP.NETMVCPlatform/Ch13_IdentityApiSupport/Views/Shared/Error.cshtml
+++ b/Textbook Exercises/ASP.NETMVCPlatform/Ch13_IdentityApiSupport/Views/Shared/Error.cshtml
@@ -19,4 +19,4 @@
             break;
     }
 </div>
-@Html.ActionLink("Back to Homepage", "Index", null, new { @class = "btn btn-outline-secondary" })
+@Html.ActionLink("Back to Homepage", "Index", null, new { @class = "btn btn-outline-primary" })
