--- a/Textbook Exercises/ASP.NETMVCPlatform/Ch13_IdentityApiSupport/Views/RoleAdmin/Index.cshtml
+++ b/Textbook Exercises/ASP.NETMVCPlatform/Ch13_IdentityApiSupport/Views/RoleAdmin/Index.cshtml
@@ -3,9 +3,9 @@
 @model  IEnumerable<AppRole>
 @{ ViewBag.Title = "Roles"; }
 
-<div class="card text-bg-light">
-    <div class="card card-header">Display All Roles</div>
-    <table>
+<div class="card text-bg-secondary">
+    <h3 class="card card-header text-center">Display All Roles</h3>
+    <table class="table table-striped">
         <tr><th>ID</th><th>Name</th><th>Users</th><th>Actions</th></tr>
         @if (Model.Count() == 0) {
             <tr><td colspan="4" class="text-center">No Roles</td></tr>
