--- a/Textbook Exercises/ASP.NETMVCPlatform/Ch13_IdentityApiSupport/Views/Home/UserProperties.cshtml
+++ b/Textbook Exercises/ASP.NETMVCPlatform/Ch13_IdentityApiSupport/Views/Home/UserProperties.cshtml
@@ -6,7 +6,7 @@
     <div class="card-header text-center">Custom User Properties</div>
     <table class="table table-striped table-light">
         <tr><td>City</td><td>@Model.City</td></tr>
-        <tr><td>City</td><td>@Model.Country</td></tr>
+        <tr><td>Country</td><td>@Model.Country</td></tr>
     </table>
 </div>
 
