--- a/Textbook Exercises/ASP.NETMVCPlatform/Ch13_IdentityApiSupport/Views/Account/Login.cshtml
+++ b/Textbook Exercises/ASP.NETMVCPlatform/Ch13_IdentityApiSupport/Views/Account/Login.cshtml
@@ -18,5 +18,10 @@
         @Html.TextBoxFor(x => x.Password, new { @class = "form-control" })
     </div>
 
-    <input type="submit" value="Log In" class="btn btn-outline-secondary"/>
+    <input type="submit" value="Log In" class="btn btn-outline-secondary" />
+}
+
+@using (Html.BeginForm("GoogleLogin", "Account")) {
+    <input type="hidden" name="returnUrl" value="@ViewBag.returnUrl" />
+    <button class="btn btn-primary" type="submit">Log In via Google</button>
 }
