--- a/SportsStore/SportsStore.WebUI/Views/Manage/Index.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Manage/Index.cshtml
@@ -14,12 +14,9 @@
             <dt>Password:</dt>
             <dd>
                 [
-                @if (Model.HasPassword)
-                {
+                @if (Model.HasPassword) {
                     @Html.ActionLink("Change your password", "ChangePassword")
-                }
-                else
-                {
+                } else {
                     @Html.ActionLink("Create", "SetPassword")
                 }
                 ]
@@ -31,13 +28,13 @@
             </dd>
             @*
                 Phone Numbers can used as a second factor of verification in a two-factor authentication system.
-                
+
                 See <a href="https://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
                     for details on setting up this ASP.NET application to support two-factor authentication using SMS.
-                
+
                 Uncomment the following block after you have set up two-factor authentication
             *@
-            @*  
+            @*
                 <dt>Phone Number:</dt>
                 <dd>
                     @(Model.PhoneNumber ?? "None")
