added the two addtl views

--- a/SportsStore/SportsStore.WebUI/Content/Admin.css
+++ b/SportsStore/SportsStore.WebUI/Content/Admin.css
@@ -35,7 +35,7 @@ FORM {
 }
 
 DIV.Message {
-    background: gray;
+    background: red;
     color: White;
     padding: .2em;
     margin-top: .25em;
