--- a/SportsStore/SportsStore.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -1,21 +1,34 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta name="viewport" content="width=device-width" />
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/Admin.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/jquery-3.7.1.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <div>
+
+    @{ string applicationName = "Sports Store"; }
+    <nav class="navbar bg-dark navbar-expand-lg border-bottom border-bottom-dark bg-body-tertiary" data-bs-theme="dark">
+        <div class="container">
+            @Html.ActionLink(applicationName, "List", "Product", null, new { @class = "navbar-brand" })
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+    </nav>
+
+    <div class="container">
         @if (TempData["message"] != null) {
-            <div class="Message">@TempData["message"]</div>
+            <div class="alert alert-success mx-auto mt-2 w-25">@TempData["message"]</div>
         }
 
         @RenderBody()
+
     </div>
 </body>
 
