--- a/SportsStore/SportsStore.WebUI/Views/Admin/Index.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Admin/Index.cshtml
@@ -5,12 +5,14 @@
 }
 
 
-<div class="card">
+<div class="card w-75 mx-auto">
+
     <div class="card-header">
         <h2 class="text-center">All Merchandise</h2>
     </div>
 
     <div class="card-body">
+
         <table class="table table-striped table-group-divider">
             <thead class="">
                 <tr>
@@ -20,6 +22,7 @@
                     <th class="text-center">Actions</th>
                 </tr>
             </thead>
+
             @foreach (var item in Model) {
                 <tbody>
                     <tr>
@@ -34,12 +37,13 @@
                         </td>
                     </tr>
                 </tbody>
-            }
+             }
+
         </table>
     </div>
 
-    <div class="card-footer w-25">
-        @Html.ActionLink("Add New Item", "Create", null, new { @class = "btn btn-primary btn-lg m-3" })
+    <div class="w-25 mx-auto mb-1">
+        @Html.ActionLink("Add New Item", "Create", null, new { @class = "btn btn-outline-primary" })
     </div>
 
 </div>
