work in progress

--- a/SportsStore/SportsStore.WebUI/Views/Admin/Index.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Admin/Index.cshtml
@@ -37,7 +37,7 @@
                         </td>
                     </tr>
                 </tbody>
-             }
+            }
 
         </table>
     </div>
@@ -47,3 +47,13 @@
     </div>
 
 </div>
+
+
+
+
+@section scripts {
+    <script>
+        //Works
+        AdminArea.AdminAreaInit();
+    </script>
+}
