--- a/SportsStore/SportsStore.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -39,6 +39,8 @@
         </div>
     </nav>
 
+    @Scripts.Render("~/bundles/site")
+    @RenderSection("scripts", required: false)
 </body>
 
 </html>
