--- a/SportsStore/SportsStore.WebUI/Views/Product/List.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Product/List.cshtml
@@ -6,11 +6,13 @@
 
 <h2>List</h2>
 
-@foreach (var p in Model.Products) {
-    Html.RenderPartial("ProductSummary", p);
+
+@foreach (var m in Model.Products) {
+    Html.RenderPartial("ProductSummary", m);
 }
 
-<div class="pager">
-    @Html.PageLinks(Model.PagingInfo, x => Url.Action("List", new { page = x, category = Model.CurrentCategory }))
+<div class="btn btn-group float-end">
+    @Html.PageLinks(Model.PagingInfo, p => Url.Action("List", new { page = p, category = Model.CurrentCategory }))
 </div>
+
 
