--- a/SportsStore/SportsStore.WebUI/Views/Shared/ProductSummary.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Shared/ProductSummary.cshtml
@@ -1,14 +1,39 @@
 ﻿
 @model SportsStore.Domain.Entities.Product
 
-<div class="item">
-    <h3>@Model.Name</h3>
-    @Model.Description
+<div class="card mb-3">
+    <div class="row">
+        <div class="col-sm-3 py-3" style="width:7rem;">
+            @if (Model.ImageData != null) {
+                <div class="float-end">
+                    <img class="img-thumbnail"
+                         src="@Url.Action("GetImage", "Merch", new {Model.ProductID})"
+                         alt="@Model.Name"
+                         title="@Model.Description" />
+                </div>
+            } else {
+                <div class="btn text-center">
+                    Image Not Available
+                </div>
+            }
+        </div>
 
-    @using (Html.BeginForm("AddToCart", "Cart")) {
-        @Html.HiddenFor(x => x.ProductID)
-        @Html.Hidden("returnUrl", Request.Url.PathAndQuery)
-        <input type="submit" value="+ Add to cart" />
-    }
-    <h4>@Model.Price.ToString("c")</h4>
+        <div class="col-sm-6 py-3">
+            <h2>@Model.Name</h2>
+            <span class="pt-3 ">@Model.Description</span>
+        </div>
+        <div class="col-sm-3 py-3 float-start">
+            <input type="button" class="btn btn-secondary mb-1" value="@Model.Price.ToString("c")" disabled />
+
+            @using (Html.BeginForm("AddToCart", "Cart")) {
+                <div class="">
+                    @Html.HiddenFor(x => x.ProductID)
+                    @Html.Hidden("returnUrl", Request.Url.PathAndQuery)
+                    <input type="submit" class="btn btn-outline-secondary" value="Add To Cart" />
+                </div>
+            }
+        </div>
+
+    </div>
 </div>
+
