--- a/SportsStore/SportsStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Shared/_Layout.cshtml
@@ -6,7 +6,6 @@
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
     <div id="header">
@@ -19,6 +18,12 @@
     <div id="content">
         @RenderBody()
     </div>
+
+
+    @Scripts.Render("~/bundles/bootstrap")  @* Bootstrap first, then jquery, last custom js  *@
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/site")
+    @RenderSection("scripts", required: false)
 </body>
 
 </html>
