--- a/SportsStore/SportsStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
 </head>
 <body>
 
+    @Html.Partial("_NavHeader", applicationName)
 
     <div class="card container mt-2">
         @Html.Action("Summary", "Cart")
