--- a/SportsStore/SportsStore.WebUI/Views/Shared/_NavHeader.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Shared/_NavHeader.cshtml
@@ -1,7 +1,7 @@
 ﻿@model string
 <nav class="navbar bg-dark navbar-expand-lg border-bottom border-bottom-dark bg-body-tertiary" data-bs-theme="dark">
     <div class="container">
-        @Html.ActionLink(Model.ToUpper(), "List", "Merch", null, new { @class = "navbar-brand" })
+        @Html.ActionLink(Model.ToUpper(), "List", "Product", null, new { @class = "navbar-brand" })
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
