--- a/SportsStore/SportsStore.WebUI/Views/Shared/_NavHeader.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Shared/_NavHeader.cshtml
@@ -1,4 +1,11 @@
 ﻿@model string
+@{
+    string adminAccess = "";
+    if (DateTime.Now.Hour > 6) {
+        adminAccess = "disabled";
+    }
+
+}
 <nav class="navbar bg-dark navbar-expand-lg border-bottom border-bottom-dark bg-body-tertiary" data-bs-theme="dark">
     <div class="container">
         @Html.ActionLink(Model.ToUpper(), "List", "Product", null, new { @class = "navbar-brand" })
@@ -18,9 +25,9 @@
                         <li class="nav-item disabled text-center"><h4>All Services</h4></li>
                         <li><hr class="dropdown-divider"></li>
                         <li>@Html.ActionLink("In Progress", "List", "ProductVendor", new { area = "" }, new { @class = "nav-link dropdown-item" })</li>
-                        <li>@Html.ActionLink("Link 1", "UnderConstruction", "InProgress", new { area = "" }, new { @class = "nav-link dropdown-item" })</li>
-                        <li>@Html.ActionLink("Link 1", "UnderConstruction", "InProgress", new { area = "" }, new { @class = "nav-link dropdown-item" })</li>
-                        <li>@Html.ActionLink("Link 1", "UnderConstruction", "InProgress", new { area = "" }, new { @class = "nav-link dropdown-item disabled" })</li>
+                        <li>@Html.ActionLink("Dropdown Link 1", "UnderConstruction", "InProgress", new { area = "" }, new { @class = "nav-link dropdown-item" })</li>
+                        <li>@Html.ActionLink("Dropdown Link 2", "UnderConstruction", "InProgress", new { area = "" }, new { @class = "nav-link dropdown-item" })</li>
+                        <li>@Html.ActionLink("Dropdown Link 2", "UnderConstruction", "InProgress", new { area = "" }, new { @class = "nav-link dropdown-item disabled" })</li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -39,7 +46,7 @@
             </form>
             <ul class="navbar-nav mb-2 mb-lg-0">
                 <li class="nav-item">
-                    @Html.ActionLink("Pricings", "UnderConstruction", "InProgress", new { area = "" }, new { @class = "nav-link" })
+                    @Html.ActionLink("Admin", "Index", "Admin", new { area = "" }, new { @class = $"nav-link {adminAccess}"})
                 </li>
                 <li class="nav-item"><a class="nav-link disabled"><i class="bi bi-person-lock ytp-bigger"></i></a></li>
             </ul>
