--- a/SportsStore/SportsStore.WebUI/Views/Cart/Summary.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Cart/Summary.cshtml
@@ -1,9 +1,20 @@
 ﻿@model SportsStore.Domain.Entities.Cart
 
-<div id="cart">
-    <span class="caption">
-        <b>Your cart:</b>
-        @Model.Lines.Sum(x => x.Quantity) item(s),@Model.ComputeTotalValue().ToString("c")
-    </span>
-    @Html.ActionLink("Checkout", "Index", "Cart", new { returnUrl = Request.Url.PathAndQuery }, null)
+@{
+    string summaryTitle = "Merchandise";
+}
+<div class="hstack gap-3">
+    <div class="p-2 d-none d-sm-block"><h1>@summaryTitle</h1></div>
+
+    <div class="p-2 ms-auto">
+        <b class="d-none d-sm-block">Your Cart:</b>
+        @Model.Lines.Sum(x => x.Quantity) item(s),
+        @Model.ComputeTotalValue().ToString("c")
+    </div>
+
+    <div class="p-2">
+        @Html.ActionLink("Checkout", "Index", "Cart",
+    new { returnUrl = Request.Url.PathAndQuery },
+    new { @class = "btn btn-secondary navbar-btn" })
+    </div>
 </div>
