--- a/SportsStore/SportsStore.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -29,7 +29,7 @@
                         @Html.ActionLink(applicationName, "List", "Product", new { area = "" }, new { @class = "nav-link" })
                     </li>
                     <li class="nav-item">
-                        @Html.ActionLink("Log Activities", "ActionLog", "Admin", new { area = "" }, new { @class = "nav-link" })
+                        @Html.ActionLink("Log Activities", "UserActivityLog", "Admin", new { area = "" }, new { @class = "nav-link" })
                     </li>
                 </ul>
             </div>
