--- a/DemoExercises/DEP.ConsumerDemo/App.xaml
+++ b/DemoExercises/DEP.ConsumerDemo/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="WPF.AppOne.App"
+﻿<Application x:Class="DEP.ConsumerDemo.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WPF.AppOne"
+             xmlns:local="clr-namespace:DEP.ConsumerDemo"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
