--- a/DemoExercises/DEP.ConsumerDemo/SunInfo.xaml
+++ b/DemoExercises/DEP.ConsumerDemo/SunInfo.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="WPF.AppOne.MainWindow"
+﻿<Window x:Class="DEP.ConsumerDemo.SunInfo"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPF.AppOne"
+        xmlns:local="clr-namespace:DEP.ConsumerDemo"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="SunInfo" Height="450" Width="800">
     <Grid>
-
+        
     </Grid>
 </Window>
