adding addtl res

--- a/DemoExercises/DEP.ConsumerDemo/SunInfo.xaml
+++ b/DemoExercises/DEP.ConsumerDemo/SunInfo.xaml
@@ -5,8 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DEP.ConsumerDemo"
         mc:Ignorable="d"
-        Title="SunInfo" Height="450" Width="800">
+        Title="SunInfo" Height="450" Width="800" WindowStartupLocation="CenterScreen">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="149*"/>
+            <ColumnDefinition Width="11*"/>
+        </Grid.ColumnDefinitions>
+        <Button x:Name="loadSunDataBtn" Content="Load Sun Data" Click="LoadSunDataBtn_Click" Margin="258,25,203,370"/>
+        <TextBlock x:Name="sunriseText" Margin="20,20,373,240"/>
+        <TextBlock x:Name="sunsetText" Margin="20,20,540,325"/>
+
     </Grid>
 </Window>
