--- a/DemoExercises/DEP.ConsumerDemo/MainWindow.xaml
+++ b/DemoExercises/DEP.ConsumerDemo/MainWindow.xaml
@@ -4,12 +4,26 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DEP.ConsumerDemo"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        mc:Ignorable="d" FontSize="22" Loaded="Window_Loaded"
+        Title="MainWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen">
     <Grid>
-        <Button Content="Previous" Margin="85,40,560,335"/>
-        <Button Content="Sun Information" Margin="305,40,340,335"/>
-        <Button Content="Next" Margin="550,40,95,335"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="143*"/>
+            <ColumnDefinition Width="17*"/>
+        </Grid.ColumnDefinitions>
+        <Button x:Name="PrvImgButton" Content="Previous Image" Margin="85,40,475,335" Click="PrvImgButton_Click"/>
+        <Button x:Name="SunDataBtn" Content="Sun Data" Margin="292,40,207,335" Click="SunDataBtn_Click"/>
+        <Button x:Name="NextImgButton" Content="Next Image" Margin="550,40,10,335" Click="NextImgButton_Click"/>
+        <Image x:Name="ComicImage" Margin="48,121,49,20" Grid.ColumnSpan="2">
+            <UIElement.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </UIElement.RenderTransform>
+        </Image>
 
     </Grid>
 </Window>
