--- a/DemoExercises/DPE.BlazorWebApp.SA/App.razor
+++ b/DemoExercises/DPE.BlazorWebApp.SA/App.razor
@@ -1,4 +1,8 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+﻿@using Microsoft.FluentUI.AspNetCore.Components
+
+<FluentDesignTheme StorageName="theme" />
+
+<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
